# Hukuki-Asistan-App

./: .gitignore  LICENSE  README.md  index.html
backend/: .cursorrules  .env.example  .gitignore  pyproject.toml  seed_data.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  search.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: crud_case.py  crud_saved.py  crud_user.py
backend/app/db/: database.py  init.py  seed.py
backend/app/models/: __init__.py  association.py  case.py  user.py
backend/app/schemas/: case.py  saved.py  user.py
backend/app/services/: nlp_service.py  xai_service.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
frontend/src/: main.js  style.css
frontend/src/components/: AppShell.vue  AppSidebar.vue  CaseDetailModal.vue  CaseResultCard.vue  ConfidenceGauge.vue  ExpandableText.vue
frontend/src/router/: index.js
frontend/src/services/: mockSearch.js
frontend/src/stores/: auth.js  savedCases.js  ui.js
frontend/src/views/: AboutView.vue  HomeView.vue  LoginView.vue  SavedCasesView.vue  SearchView.vue
src/: App.vue  main.js  style.css
src/components/: AIInsight.vue  AppShell.vue  AppSidebar.vue  CaseDetailModal.vue  CaseResultCard.vue  ConfidenceGauge.vue
src/router/: index.js
src/stores/: savedCases.js  ui.js
src/views/: HomeView.vue  SavedCasesView.vue  SearchView.vue
